@@ -57,6 +57,17 @@ android {
     testOptions {
         unitTests {
             includeAndroidResources = true
+            all {
+                // Open JDK17 modules for reflective access used by Robolectric/ReflectionHelpers
+                jvmArgs(
+                        '--add-opens=java.base/java.lang=ALL-UNNAMED',
+                        '--add-opens=java.base/java.lang.reflect=ALL-UNNAMED',
+                        '--add-opens=java.base/java.io=ALL-UNNAMED',
+                        '--add-opens=java.base/java.util=ALL-UNNAMED',
+                        '--add-opens=java.base/java.text=ALL-UNNAMED',
+                        '--add-opens=java.desktop/java.awt.font=ALL-UNNAMED'
+                )
+            }
         }
     }
     packaging {
@@ -108,11 +119,11 @@ dependencies {
     implementation 'com.github.rey5137:material:1.3.1'
     // Use the upgraded MaterialEditText fork published under BlueCode
     implementation 'io.github.bluecodesystems:materialedittext:3.1.6'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
-    implementation 'androidx.appcompat:appcompat:1.6.1'
-    implementation 'androidx.localbroadcastmanager:localbroadcastmanager:1.1.0'
-    implementation 'androidx.recyclerview:recyclerview:1.3.1'
-    implementation 'androidx.cardview:cardview:1.0.0'
+    implementation "androidx.constraintlayout:constraintlayout:$constraintLayoutVersion"
+    implementation "androidx.appcompat:appcompat:$appcompatVersion"
+    implementation "androidx.localbroadcastmanager:localbroadcastmanager:$localBroadcastManagerVersion"
+    implementation "androidx.recyclerview:recyclerview:$recyclerViewVersion"
+    implementation "androidx.cardview:cardview:$cardViewVersion"
     implementation('com.github.ganfra:material-spinner:2.0.0') {
         exclude group: 'com.nineoldandroids', module: 'library'
         exclude group: 'com.android.support', module: 'appcompat-v7'
@@ -153,9 +164,9 @@ dependencies {
     implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.12.0'
 
     // CircleProgressbar will be picked up via fileTree above if present locally
-    implementation 'com.jakewharton.timber:timber:5.0.1'
-    implementation "org.greenrobot:eventbus:3.2.0"
-    implementation 'androidx.multidex:multidex:2.0.1'
+    implementation "com.jakewharton.timber:timber:$timberVersion"
+    implementation "org.greenrobot:eventbus:$eventBusVersion"
+    implementation "androidx.multidex:multidex:$multidexVersion"
 
     // PowerMock
     def powerMockVersion = '2.0.9'
@@ -170,14 +181,14 @@ dependencies {
 
     androidTestImplementation 'com.jayway.android.robotium:robotium-solo:5.6.3'
     androidTestImplementation 'junit:junit:4.13.2'
-    androidTestImplementation('androidx.test.ext:junit:1.1.3') {
+    androidTestImplementation("androidx.test.ext:junit:$androidxTestExtJunitVersion") {
         exclude group: 'com.android.support', module: 'appcompat-v7'
 
     }
-    androidTestImplementation('androidx.test.espresso:espresso-core:3.4.0') {
+    androidTestImplementation("androidx.test.espresso:espresso-core:$espressoCoreVersion") {
         exclude group: 'com.android.support', module: 'support-annotations'
     }
-    androidTestImplementation('androidx.test:rules:1.4.0') {
+    androidTestImplementation("androidx.test:rules:$androidxTestRulesVersion") {
         exclude group: 'com.android.support', module: 'appcompat-v7'
 
     }
@@ -186,7 +197,7 @@ dependencies {
     testImplementation 'org.apache.maven:maven-ant-tasks:2.1.3'
     testImplementation 'org.mockito:mockito-core:3.12.4'
     testImplementation('com.squareup:fest-android:1.0.8') { exclude module: 'support-v4' }
-    testImplementation 'org.robolectric:robolectric:4.3.1'
+    testImplementation 'org.robolectric:robolectric:4.10.3'
     testImplementation "org.json:json:20220320"
 }
 
